# PLATO_ROS

./: .gitignore  CMakeLists.txt
hand_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
hand_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  plato.ros2_control.xacro  plato.srdf  plato.urdf.xacro  ros2_controllers.yaml
hand_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
optimo_description/: CMakeLists.txt  package.xml
optimo_description/include/: CMakeLists.txt
optimo_description/launch/: optimo_rsp.launch.py  optimo_rviz.launch  optimo_rviz2.launch.py  optimo_rviz2.py  optimo_rviz2.xml  plato_rviz2.py
optimo_description/meshes/: Link0.STL  Link1.STL  Link2.STL  Link3.STL  Link4.STL  Link5.STL  Link6.STL  Link7.STL  col7.stl  link0.dae  link1.dae  link2.dae  link3.dae  link4.dae  link5.dae  link6.dae  link7.dae  link7.stl
optimo_description/meshes/plato/: mcp_pitch_connect.stl  mid_2_collision.stl  mid_3_visual.stl  mid_visual.stl  palm.stl  phlange.stl  prox_2_visual.stl  prox_3_collision.stl  prox_collision.stl  prox_visual.stl  proxbracket_2_collision.stl  proxbracket_3_collision.stl  wrist.stl
optimo_description/rviz/: optimo.rviz
optimo_description/urdf/: optimo.gazebo.xacro  optimo.urdf  optimo.urdf.xacro  optimo_arm.xacro  panda.urdf  plato.urdf.xacro  plato2.urdf.xacro
optimo_description/urdf/customURDF/: optimo.urdf.xacro
optimo_description/urdf/optimo_property/: optimo.control.xacro  optimo.gazebo.xacro  optimo_arm.xacro
optimo_description/urdf/optimo_xacro/: optimo.control.xacro  optimo.effort_control.xacro  optimo.gazebo.xacro  optimo_arm.xacro
optimo_moveit/: CMakeLists.txt  package.xml
optimo_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
optimo_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  optimo.ros2_control.xacro  optimo.srdf  optimo.urdf.xacro  ros2_controllers.yaml
optimo_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
panda_moveit_config/: .setup_assistant  package.xml
plato_bringup/: CMakeLists.txt  package.xml
plato_bringup/config/: optimo_controllers.yaml  plato_controllers.yaml
plato_description/: CMakeLists.txt  package.xml
plato_description/launch/: plato_hand_rsp.launch.py  plato_hand_rviz2.launch.py  plato_manipulator_rsp.launch.py  plato_rsp.launch.py  plato_rviz2.launch.py
plato_description/rviz/: plato.rviz  plato_manipulator.rviz
plato_description/urdf/: plato.urdf.xacro  plato_hand.urdf  plato_hand.urdf.xacro  plato_manipulator.urdf  plato_manipulator.urdf.xacro
plato_gazebo/: CMakeLists.txt  package.xml
plato_moveit/: CMakeLists.txt  package.xml
plato_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
plato_moveit_control/: CMakeLists.txt  package.xml  setup.cfg  setup.py
plato_moveit_control/launch/: moveit_control.launch.py  plato_control.launch.py  plato_ee_control.launch.py
plato_moveit_control/plato_moveit_control/: __init__.py  control.py
plato_moveit_control/src/: motion_planning.cpp  moveit_control.cpp  state_and_model.cpp
(+69 files in other folders)
